[package]
name = "site_link_extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.6.0"
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1.0.69"
futures = "0.3.26"
